# MultiChat

./: CMakeLists.txt  README.md
Client/: client.cpp  client.h  main.cpp
Display/: display.cpp  display.h  main.cpp
Server/: main.cpp  server.cpp  server.h
Utils/: network_utils.cpp  network_utils.h
